--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,13 @@ jobs:
       with:
         go-version: '1.20'
 
+    - name: Docker login
+      run: echo ${{secrets.DOCKER_PASSWORD}} | docker login -u ${{ secrets.DOCKER_USERNAME }}
+
     - name: Docker Build
       run: docker build . -t simple_time_service
+
+    - name: Docker push
+      run: |
+        docker tag simple_time_service ghcr.io/ritika54/simple_time_service:latest
+        docker push -t ghcr.io/ritika54/simple_time_service:latest
