--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,10 @@ jobs:
         go-version: '1.20'
 
     - name: Docker login
-      run: echo ${{secrets.DOCKER_PASSWORD}} | docker login -u ${{ secrets.DOCKER_USERNAME }}
+      run: echo ${{secrets.DOCKER_PASSWORD}} | docker login ghcr.io/ritika54 -u ${{ secrets.DOCKER_USERNAME }} --password-stdin 
 
     - name: Docker Build
-      run: docker build . -t simple_time_service
+      run: docker build . -t simple_time_service 
 
     - name: Docker push
       run: |
