--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,9 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v4
-    
-        - name: Azure CLI Action
-          uses: Azure/cli@v2.2.0
 
         - name: Azure login
           uses: azure/login@v2
@@ -21,5 +18,9 @@ jobs:
             tenant-id: ${{ secrets.AZURE_TENANT_ID }}
             subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-        - name: Az account
-          run: az account show
+        - name: Azure CLI script
+          uses: azure/cli@v2
+          with:
+            azcliversion: latest
+            inlineScript: |
+                az account show
