--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,6 +8,9 @@ jobs:
 
   terraform:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write 
+      contents: read
     steps:
         - uses: actions/checkout@v4
 
@@ -17,7 +20,6 @@ jobs:
             client-id: ${{ secrets.AZURE_CLIENT_ID }}
             tenant-id: ${{ secrets.AZURE_TENANT_ID }}
             subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-            clientSecret: ${{ secrets.AZURE_CLIENT_SECRET }}
 
         - name: Azure CLI script
           uses: azure/cli@v2
