--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -16,6 +16,7 @@ jobs:
       pull-requests: write
     env:
         TF_WORKSPACE: "SimpleTimeService"
+        CONFIG_DIRECTORY : "./gitops/terraform/"
     steps:
         - uses: actions/checkout@v4
 
