--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,19 +6,19 @@ on:
     pull_request:
       branches: [ "main" ]
 
-jobs:
+env:
+    TF_WORKSPACE: "SimpleTimeService"
+    CONFIG_DIRECTORY : "./gitops/terraform"
+    TF_CLOUD_ORGANIZATION: "AzRitika"
+    TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
 
+jobs:
   terraform:
     runs-on: ubuntu-latest
     permissions:
       id-token: write 
       contents: read
       pull-requests: write
-    env:
-        TF_WORKSPACE: "SimpleTimeService"
-        CONFIG_DIRECTORY : "./gitops/terraform/"
-        TF_CLOUD_ORGANIZATION: "AzRitika"
-        TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
     steps:
         - uses: actions/checkout@v4
 
