--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -38,20 +38,28 @@ jobs:
 
         - name: Terraform fmt
           id: fmt
-          run: terraform fmt -check
+          run: |
+            cd ./gitops/terraform
+            terraform fmt -check
           continue-on-error: true
     
         - name: Terraform Init
           id: init
-          run: terraform init -input=false
+          run: |
+            cd ./gitops/terraform
+            terraform init -input=false
     
         - name: Terraform Validate
           id: validate
-          run: terraform validate -no-color
+          run: |
+            cd ./gitops/terraform
+            terraform validate -no-color
     
         - name: Terraform Plan
           id: plan
-          run: terraform plan -no-color -input=false
+          run: |
+            cd ./gitops/terraform
+            terraform plan -no-color -input=false
           continue-on-error: true
     
         - uses: actions/github-script@v7
