adding az creds with plan step

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,17 +22,17 @@ jobs:
     steps:
         - uses: actions/checkout@v4
 
-        - name: Azure login
-          uses: azure/login@v2
-          with:
-            creds: '{"clientId":"${{ secrets.AZURE_CLIENT_ID }}","clientSecret":"${{ secrets.AZURE_CLIENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.AZURE_TENANT_ID }}"}'
+        # - name: Azure login
+        #   uses: azure/login@v2
+        #   with:
+        #     creds: '{"clientId":"${{ secrets.AZURE_CLIENT_ID }}","clientSecret":"${{ secrets.AZURE_CLIENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.AZURE_TENANT_ID }}"}'
 
-        - name: Azure CLI script
-          uses: azure/cli@v2
-          with:
-            azcliversion: latest
-            inlineScript: |
-                az account show
+        # - name: Azure CLI script
+        #   uses: azure/cli@v2
+        #   with:
+        #     azcliversion: latest
+        #     inlineScript: |
+        #         az account show
         
         - name: Upload Configuration
           uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
@@ -53,6 +53,10 @@ jobs:
             workspace: ${{ env.TF_WORKSPACE }}
             configuration_version: ${{ steps.plan-upload.outputs.configuration_version_id }}
             plan_only: true
+            ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+            ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+            ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+            ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
         
         - name: Get Plan Output
           uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.0.0
@@ -96,5 +100,5 @@ jobs:
                     body: output
                 });
             
-        - name: Az logout
-          run: az logout
+        # - name: Az logout
+        #   run: az logout
