--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -56,4 +56,7 @@ jobs:
 
         - name: Apply yamls on cluster
           run: |
-            kubectl apply -f gitops/chart/ -n simple-time-service
+            cd gitops/chart
+            DOCKER_CFG_JSON=$(echo -n '{"auths":{"ghcr.io/ritika54":{"username":"Ritika54","password":"${{ secrets.DOCKER_PASSWORD }}"}}}' | base64 -w 0)
+            sed "s|YOUR_SECRET_PLACEHOLDER|$DOCKER_CFG_JSON|" secret.yaml > secret.yaml
+            kubectl apply -f . -n simple-time-service
