--- a/gitops/chart/deployment.yaml
+++ b/gitops/chart/deployment.yaml
@@ -20,4 +20,5 @@ spec:
             cpu: "500m"
         ports:
         - containerPort: 8080
-
+      imagePullSecrets:
+        - name: image-pull-secret
