--- a/gitops/chart/secret.yaml
+++ b/gitops/chart/secret.yaml
@@ -3,5 +3,5 @@ kind: Secret
 metadata:
   name: image-pull-secret
 data:
-  .dockerconfigjson: YOUR_SECRET_PLACEHOLDER
+  .dockerconfigjson: SECRET_PLACEHOLDER
 type: kubernetes.io/dockerconfigjson
