--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,29 +8,29 @@ on:
 
 jobs:
 
-  # build:
-    # runs-on: ubuntu-latest
-    # steps:
-    # - uses: actions/checkout@v4
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
 
-    # - name: Set up Go
-    #   uses: actions/setup-go@v4
-    #   with:
-    #     go-version: '1.20'
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.20'
 
-    # - name: Docker login
-    #   run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login ghcr.io/ritika54 -u ${{ secrets.DOCKER_USERNAME }} --password-stdin 
+    - name: Docker login
+      run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login ghcr.io/ritika54 -u ${{ secrets.DOCKER_USERNAME }} --password-stdin 
 
-    # - name: Docker Build
-    #   run: docker build . -t simple_time_service 
+    - name: Docker Build
+      run: docker build . -t simple_time_service 
 
-    # - name: Docker push
-    #   run: |
-    #     docker tag simple_time_service ghcr.io/ritika54/simple_time_service:latest
-    #     docker push ghcr.io/ritika54/simple_time_service:latest
+    - name: Docker push
+      run: |
+        docker tag simple_time_service ghcr.io/ritika54/simple_time_service:latest
+        docker push ghcr.io/ritika54/simple_time_service:latest
   
   deploy:
-    # needs: [build]
+    needs: [build]
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v4
