--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -59,5 +59,5 @@ jobs:
             cd gitops/chart
             DOCKER_CFG_JSON=$(echo -n '{"auths":{"ghcr.io/ritika54":{"username":"Ritika54","password":"${{ secrets.DOCKER_PASSWORD }}","email":"${{ secrets.DOCKER_EMAIL }}"}}}' | base64 -w 0)
             sed "s|SECRET_PLACEHOLDER|$DOCKER_CFG_JSON|" secret.yaml > secret-tmp.yaml
-            cat secret-tmp.yaml
+            rm secret.yaml
             kubectl apply -f . -n simple-time-service
