--- a/gitops/chart/service.yaml
+++ b/gitops/chart/service.yaml
@@ -2,7 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: simple-time-service
+  annotations:
+    service.beta.kubernetes.io/azure-load-balancer-resource-group: "rg-ritika-test"
+    service.beta.kubernetes.io/azure-load-balancer-ipv4: "40.85.176.73"
+    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
 spec:
+  type: LoadBalancer
   selector:
     app: simple-time-service
   ports:
