updating cicd and yaml files

--- a/gitops/chart/secret.yaml
+++ b/gitops/chart/secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: image-pull-secret
+  namespace: simple-time-service
 data:
   .dockerconfigjson: SECRET_PLACEHOLDER
 type: kubernetes.io/dockerconfigjson
