--- a/gitops/chart/deployment.yaml
+++ b/gitops/chart/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: simple-time-service
+  namespace: simple-time-service
 spec:
   selector:
     matchLabels:
