--- a/gitops/chart/service.yaml
+++ b/gitops/chart/service.yaml
@@ -3,10 +3,10 @@ kind: Service
 metadata:
   name: simple-time-service
   namespace: simple-time-service
-  annotations:
-    service.beta.kubernetes.io/azure-load-balancer-resource-group: "rg-ritika-test"
-    service.beta.kubernetes.io/azure-load-balancer-ipv4: "40.85.176.73"
-    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
+  # annotations:
+  #   service.beta.kubernetes.io/azure-load-balancer-resource-group: "rg-ritika-test"
+  #   service.beta.kubernetes.io/azure-load-balancer-ipv4: "40.85.176.73"
+  #   service.beta.kubernetes.io/azure-load-balancer-internal: "false"
 spec:
   type: LoadBalancer
   selector:
